Fix header alignments.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,72 @@
+body
+{
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+	overflow-y: auto;
+
+	background: rgba(255, 255, 255, 1);
+	font-family: 'Raleway', sans-serif;
+}
+
+.content
+{
+	position: relative;
+	top: 0;
+	margin: 0 auto 0 auto;
+	width: 980px;
+	height: 100%;
+}
+
 #navigation
 {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 96px;
+	height: 60px;
 
-	background: rgba(255, 255, 255, 0.6);
+	border-bottom: 1px solid black;
+
+	z-index: 100;
+}
+
+.header-item
+{
+	position: absolute;
+	top: 10px;
+	height: 100%;
+	margin: 0;
+}
+
+#phone-number
+{
+	font-weight: normal;
+}
+
+#title
+{
+	left: 50%;
+	margin-left: -143px;
+}
+
+#address
+{
+	top: 12px;
+	right: 0;
+
+	font-weight: normal;
+}
+
+.panel
+{
+	position: relative;
+	left: 0;
+	width: 100%;
+	height: 900px;
+
+
+	z-index: 50;
 }
